[package]
name = "signatures"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "signatures"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "=1.16.27"
anchor-lang = "0.28.0"

[dev-dependencies]
solana-program-test = "=1.16.27"
solana-sdk = "=1.16.27"
rand = "0.8.5"
bytemuck = "1.16.3"
